@@ -1,51 +1,71 @@
+package map;
+
 import java.math.BigDecimal;
 import java.util.*;
 import java.util.stream.Collectors;
 
-public class UpperBandMapExample {
+public class GroupListToMap {
 
     public static void main(String[] args) {
-        Map<Long, List<YourObject>> originalMap = getOriginalMap(); // Replace with your actual map
+        List<YourObject> objects = getYourObjects(); // Replace with your actual list of objects
 
-        Map<BigDecimal, List<YourObject>> result = originalMap.values().stream()
-                .filter(list -> list.size() == 1)
-                .map(list -> list.get(0))
-                .collect(Collectors.toMap(
-                        obj -> obj.getUpperBand() != null ? obj.getUpperBand() : BigDecimal.ZERO, // Default to BigDecimal.ZERO if null
-                        Collections::singletonList,
-                        // No merge function needed, as lists with a size of 1 won't have duplicates
-                        LinkedHashMap::new // Maintain insertion order
+        Map<Long, List<YourObject>> maxUpperBandByGroup = objects.stream()
+                .collect(Collectors.groupingBy(
+                        YourObject::getGroupId,
+                        Collectors.collectingAndThen(
+                                Collectors.toList(),
+                                list -> list.stream()
+                                        .sorted(Comparator.comparing(YourObject::getCost, Comparator.nullsFirst(Comparator.naturalOrder())))
+                                        .collect(Collectors.toList())
+                        )
                 ));
 
         // Print the result map
-        result.forEach((upperBand, objectsList) ->
-                System.out.println("UpperBand: " + upperBand + ", Objects: " + objectsList)
+        maxUpperBandByGroup.forEach((groupId, objectsWithSortedUpperBand) ->
+                System.out.println("Group: " + groupId + ", Sorted cost Objects: " + objectsWithSortedUpperBand)
         );
     }
 
     // Other methods...
 
-    // Replace this method with your actual data source
-    private static Map<Long, List<YourObject>> getOriginalMap() {
-        // Implementation to create and return a map of Long to List<YourObject>
-        return Map.of(
-                1L, List.of(new YourObject(BigDecimal.valueOf(10.5))),
-                2L, List.of(new YourObject(BigDecimal.valueOf(15.2))),
-                3L, List.of(new YourObject((BigDecimal) null)),
-                4L, List.of(new YourObject(BigDecimal.valueOf(12.8))),
-                5L, List.of(new YourObject((BigDecimal) null))
+    // Replace this method with your actual list of objects
+    private static List<YourObject> getYourObjects() {
+        // Implementation to create and return a list of YourObject instances
+        return Arrays.asList(
+                new YourObject(1L, null),
+                new YourObject(1L, BigDecimal.valueOf(15.5)),
+                new YourObject(1L, BigDecimal.valueOf(15.2)),
+                new YourObject(2L, BigDecimal.valueOf(12.8)),
+                new YourObject(2L, null),
+                new YourObject(3L, BigDecimal.valueOf(8.0)),
+                new YourObject(3L, BigDecimal.valueOf(9.5)),
+                new YourObject(3L, null)
         );
     }
 
     static class YourObject {
-        private final BigDecimal upperBand;
+        private final Long groupId;
+        private final BigDecimal cost;
 
-        public YourObject(BigDecimal upperBand) {
-            this.upperBand = upperBand;
+        public YourObject(Long groupId, BigDecimal upperBand) {
+            this.groupId = groupId;
+            this.cost = upperBand;
         }
 
-        public BigDecimal getUpperBand() {
-            return upperBand;
+        public Long getGroupId() {
+            return groupId;
+        }
+
+        public BigDecimal getCost() {
+            return cost;
+        }
+
+        @Override
+        public String toString() {
+            return "YourObject{" +
+                    "groupId=" + groupId +
+                    ", cost=" + cost +
+                    '}';
         }
     }
 }
